--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@ Next, add opening and closing head and body tags within the html element.
 Step 4
 Add a title and a meta element to the head. Give your project a title of Registration Form, and give a charset attribute with a value of UTF-8 to your meta element.
 
+Step 5
+Nest a self-closing link element within the head element. Give it a rel attribute with value of stylesheet and an href attribute with a value of styles.css.
+
+Step 6
+Within the body, provide a heading context for the content, by adding an h1 with the text Registration Form.
+
+Step 7
+Below the heading, use the following text within a paragraph element to encourage users to register:
+Please fill out this form with the required information
 
 -->
 
@@ -18,10 +27,14 @@ Add a title and a meta element to the head. Give your project a title of Registr
 <html lang="en">
     <head>
         <title>Registration Form</title>
+        <link rel="stylesheet" href="styles.css">
         <meta charset="UTF-8">
 
     </head>
     <body>
+        <h1>Registration Form</h1>
+        <p>Please fill out this form with the required information</p>
+
 
     </body>
 </html>
