--- a/index.html
+++ b/index.html
@@ -21,6 +21,31 @@ Step 7
 Below the heading, use the following text within a paragraph element to encourage users to register:
 Please fill out this form with the required information
 
+Step 11
+As suggested by the title, you are creating a form. So, after the p element, insert a form with an action attribute targeting https://register-demo.freecodecamp.org.
+
+Step 12
+The method attribute specifies how to send form-data to the URL specified in the action attribute. The form-data can be sent via a GET request as URL parameters (with method="get") or via a POST request as data in the request body (with method="post").
+Set the method attribute to send your form data via a POST request.
+
+Step 13
+As the form will have three distinct sections, add three fieldset elements within the form element.
+
+Step 14
+The first fieldset will hold name, email, and password fields. Start by adding four label elements to the first fieldset.
+
+Step 15
+Add the following text to the label elements:
+
+Enter Your First Name:
+Enter Your Last Name:
+Enter Your Email:
+Create a New Password:
+
+Step 17
+Nest an input element within each label. Be sure to add each input after the label text, and include a space after the colon.
+
+
 -->
 
 <!DOCTYPE html>
@@ -34,6 +59,24 @@ Please fill out this form with the required information
     <body>
         <h1>Registration Form</h1>
         <p>Please fill out this form with the required information</p>
+        <form action="https://register-demo.freecodecamp.org" method="post">
+            <fieldset>
+                <label>
+                    Enter Your First Name: <input>
+                </label>
+                <label>
+                    Enter Your Last Name: <input>
+                </label>
+                <label>
+                    Enter Your Email: <input>
+                </label>
+                <label>Create a New Password: <input>
+                </label>
+            </fieldset>
+            <fieldset></fieldset>
+            <fieldset></fieldset>
+
+        </form>
 
 
     </body>
