--- a/index.html
+++ b/index.html
@@ -45,6 +45,40 @@ Create a New Password:
 Step 17
 Nest an input element within each label. Be sure to add each input after the label text, and include a space after the colon.
 
+Step 18
+Following accessibility best practices, link the input elements and the label elements together using the for attribute.
+Use first-name, last-name, email, and new-password as values for the respective id attributes.
+
+Step 19
+Specifying the type attribute of a form element is important for the browser to know what kind of data it should expect. If 
+the type is not specified, the browser will default to text.
+Give the first two input elements a type attribute of text, the third a type attribute of email, and the fourth a type 
+attribute of password.
+The email type only allows emails with a @ and a . in the domain. The password type obscures the input, and warns if the site 
+does not use HTTPS.
+
+Step 20
+The first input element with a type of submit is automatically set to submit its nearest parent form element.
+To handle the form submission, after the last fieldset element add an input element with the type attribute set to submit and 
+the value attribute set to Submit.
+
+Step 21
+At this point, you should be able to submit the form. However, you might notice not much happens.
+To make the form more interactive, add the required attribute to the input elements in the first fieldset.
+Now, if you try to submit the form without filling in the required fields, you will see an error message.
+
+Step 22
+Certain type attribute values come with built-in form validation. For example, type="email" requires that the value be a valid email address.
+Add custom validation to the password input element, by adding a minlength attribute with a value of 8. Doing so prevents inputs of less than 8 characters being submitted.
+
+Step 23
+With type="password" you can use the pattern attribute to define a regular expression that the password must match to be 
+considered valid.
+Add a pattern attribute to the password input element to require the input match: [a-z0-5]{8,}
+The above is a regular expression which matches eight or more lowercase letters or the digits 0 to 5. Then, remove the 
+minlength attribute, and try it out.
+
+
 
 -->
 
@@ -61,20 +95,21 @@ Nest an input element within each label. Be sure to add each input after the lab
         <p>Please fill out this form with the required information</p>
         <form action="https://register-demo.freecodecamp.org" method="post">
             <fieldset>
-                <label>
-                    Enter Your First Name: <input>
+                <label for="first-name">
+                    Enter Your First Name: <input id="first-name" type="text" required>
                 </label>
-                <label>
-                    Enter Your Last Name: <input>
+                <label for="last-name">
+                    Enter Your Last Name: <input id="last-name" type="text" required>
                 </label>
-                <label>
-                    Enter Your Email: <input>
+                <label for="email">
+                    Enter Your Email: <input id="email" type="email">
                 </label>
-                <label>Create a New Password: <input>
+                <label for="new-password">Create a New Password: <input id="new-password" type="password" required pattern=[a-z0-5]{8,}>
                 </label>
             </fieldset>
             <fieldset></fieldset>
             <fieldset></fieldset>
+            <input type="submit" value="Submit">
 
         </form>
 
