--- a/index.html
+++ b/index.html
@@ -115,6 +115,25 @@ To finish this fieldset off, link the text terms and conditions in the third lab
 location:
 https://www.freecodecamp.org/news/terms-of-service/
 
+Step 31
+Moving on to the final fieldset. What if you wanted to allow a user to upload a profile picture?
+Well, the input type file allows just that. Add a label with the text Upload a profile picture: , and nest an input accepting 
+a file upload.
+
+Step 32
+Add another label after the first, with the text Input your age (years): . Then, nest an input with the type of number.
+Next, add a min attribute to the input with a value of 13 because users under the age of 13 should not register. Also, users 
+probably will not be over the age of 120; add a max attribute with a value of 120.
+Now, if someone tries to submit the form with values outside of the range, a warning will appear, and the form will not submit. 
+Give it a try.
+
+Step 33
+Adding a dropdown to the form is easy with the select element. The select element is a container for a group of option 
+elements, and the option element acts as a label for each dropdown option. Both elements require closing tags.
+Start, by adding a select element below the two label elements. Then, nest 5 option elements within the select element.
+
+
+
 -->
 
 <!DOCTYPE html>
@@ -153,7 +172,23 @@ https://www.freecodecamp.org/news/terms-of-service/
                     I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a>
                 </label>
             </fieldset>
-            <fieldset></fieldset>
+            <fieldset>
+                <label>Upload a profile picture: <input type="file" />
+                
+                </label>
+                <label>Input your age (years): <input type="number" min="13" max="120" />
+                
+                </label>
+                <label>How did you hear about us?
+                    <select>
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                    </select>
+                </label>
+            </fieldset>
             <input type="submit" value="Submit">
 
         </form>
