--- a/index.html
+++ b/index.html
@@ -132,7 +132,38 @@ Adding a dropdown to the form is easy with the select element. The select elemen
 elements, and the option element acts as a label for each dropdown option. Both elements require closing tags.
 Start, by adding a select element below the two label elements. Then, nest 5 option elements within the select element.
 
+Step 35
+The dropdown options are currently empty. To give them content, add the following text to each subsequent option element:
 
+(select one)
+freeCodeCamp News
+freeCodeCamp YouTube Channel
+freeCodeCamp Forum
+Other
+
+Step 36
+Submitting the form with an option selected would not send a useful value to the server. As such, each option needs to be 
+given a value attribute. Without which, the text content of the option will be submitted to the server.
+Give the first option a value of "", and the subsequent option elements value attributes from 1 to 4.
+
+Step 37
+The textarea element acts like an input element of type text, but comes with the added benefit of being able to receive 
+multi-line text, and an initial number of text rows and columns. Users will be able to register with a bio. Add a label with 
+the text Provide a bio: at the end of the fieldset. Add a textarea element inside the label element. Note that the textarea 
+requires a closing tag.
+
+Step 38
+Link the applicable form elements and their label elements together.
+Use profile-picture, age, referrer, and bio as values for the respective id attributes.
+
+
+Step 39
+The textarea appears too small. To give it an initial size, you can add the rows and cols attributes.
+Add an initial size of 3 rows and 30 columns.
+
+Step 40
+To give Campers an idea of what to put in their bio, the placeholder attribute is used. The placeholder accepts a text value, 
+which is displayed until the user starts typing. Give the textarea a placeholder of I like coding on the beach....
 
 -->
 
@@ -149,45 +180,29 @@ Start, by adding a select element below the two label elements. Then, nest 5 opt
         <p>Please fill out this form with the required information</p>
         <form action="https://register-demo.freecodecamp.org" method="post">
             <fieldset>
-                <label for="first-name">
-                    Enter Your First Name: <input id="first-name" type="text" required>
-                </label>
-                <label for="last-name">
-                    Enter Your Last Name: <input id="last-name" type="text" required>
-                </label>
-                <label for="email">
-                    Enter Your Email: <input id="email" type="email">
-                </label>
-                <label for="new-password">Create a New Password: <input id="new-password" type="password" required pattern=[a-z0-5]{8,}>
-                </label>
+                <label for="first-name">Enter Your First Name: <input id="first-name" name="first-name" type="text" required /></label>
+                <label for="last-name">Enter Your Last Name: <input id="last-name" name="last-name" type="text" required /></label>
+                <label for="email">Enter Your Email: <input id="email" name="email" type="email" required /></label>
+                <label for="new-password">Create a New Password: <input id="new-password" name="new-password" type="password" pattern="[a-z0-5]{8,}" required /></label>
             </fieldset>
             <fieldset>
-                <label for="personal-account"><input type="radio" name="account-type" id="personal-account"/> 
-                    Personal Account
-                </label>
-                <label for="business-account"><input type="radio" name="account-type" id="business-account"/> 
-                    Business Account
-                </label>
-                <label for="terms-and-conditions"><input id="terms-and-conditions" type="checkbox" required /> 
-                    I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a>
-                </label>
-            </fieldset>
+                <label for="personal-account"><input id="personal-account" type="radio" name="account-type" /> Personal Account</label>
+                <label for="business-account"><input id="business-account" type="radio" name="account-type" /> Business Account</label>
+                <label for="terms-and-conditions"><input id="terms-and-conditions" type="checkbox" required name="terms-and-conditions" /> I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a></label>
+            </fieldset>        
             <fieldset>
-                <label>Upload a profile picture: <input type="file" />
-                
-                </label>
-                <label>Input your age (years): <input type="number" min="13" max="120" />
-                
-                </label>
-                <label>How did you hear about us?
-                    <select>
-                        <option></option>
-                        <option></option>
-                        <option></option>
-                        <option></option>
-                        <option></option>
+                <label for="profile-picture" name="file">Upload a profile picture: <input id="profile-picture" type="file" name="file"/></label>
+                <label for="age">Input your age (years): <input id="age" type="number" min="13" max="120" name="age" /></label>
+                <label for="referrer">How did you hear about us?
+                    <select id="referrer" name="referrer">
+                    <option value="">(select one)</option>
+                    <option value="1">freeCodeCamp News</option>
+                    <option value="2">freeCodeCamp YouTube Channel</option>
+                    <option value="3">freeCodeCamp Forum</option>
+                    <option value="4">Other</option>
                     </select>
                 </label>
+                <label for="bio">Provide a bio: <textarea id ="bio" rows="3" cols="30" placeholder="I like coding on the beach..." name="bio"></textarea></label>
             </fieldset>
             <input type="submit" value="Submit">
 
